fixed methods not knowing about methods parsed later in the code; added Imports (not very helpful yet)